ADD [STUDENTS, SUBJECTS MODULES]

--- a/src/app/core/components/loading/loading.component.html
+++ b/src/app/core/components/loading/loading.component.html
@@ -1,4 +1,6 @@
-<div class="loading-spinner-container">
-    <mat-spinner [diameter]="diameter" [strokeWidth]="strokeWidth" color="primary">
-    </mat-spinner>
+<div class="container-loading">
+    <div class="loading">
+        <mat-spinner [diameter]="diameter" [strokeWidth]="strokeWidth" color="primary">
+        </mat-spinner>
+    </div>
 </div>
