--- a/src/app/modules/students/list-students/list-students.component.html
+++ b/src/app/modules/students/list-students/list-students.component.html
@@ -6,9 +6,9 @@
     <input type="text" class="search-input" (keyup)="applyFilter($event)" #input />
   </div>
 
-  <!-- <button mat-raised-button (click)="createSong()" class="btnPrimary" style="height: 80%; margin-top: 10px">
+  <button mat-raised-button (click)="create()" class="btnPrimary" style="height: 80%; margin-top: 10px">
     <mat-icon class="icon-size">add</mat-icon>AGREGAR
-  </button> -->
+  </button>
 </mat-toolbar><br />
 
 <div class="container">
@@ -21,7 +21,7 @@
 
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="name">
               Nombre
             </th>
             <td mat-cell *matCellDef="let item" style="width: 20%">
@@ -29,7 +29,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="last_name">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="last_name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="last_name">
               Apellido
             </th>
             <td mat-cell *matCellDef="let item" style="width: 20%">
@@ -37,7 +37,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="years_old">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="years_old">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="years_old">
               Edad
             </th>
             <td mat-cell *matCellDef="let item" style="width: 20%">
@@ -45,7 +45,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="total_credits">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="total_credits">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="total_credits">
               Total de creditos
             </th>
             <td mat-cell *matCellDef="let item" style="width: 20%">
@@ -54,17 +54,17 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell class="primary" *matHeaderCellDef>Acciones</th>
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let item" style="width: 20%;text-align: right;">
-              <!-- <a class="btnAction" (click)="updateSong(item)" style="color: var(--primary)" matTooltip="EDITAR">
+              <a class="btnAction" (click)="update(item)" style="color: var(--primary)" matTooltip="EDITAR">
                 <mat-icon class="custom-size-animation">edit</mat-icon>
               </a>
-              -->
 
 
-              <!-- <a class="btnAction" style="color: var(--error)" (click)="deleteSong(item)" matTooltip="DESACTIVAR">
+
+              <a class="btnAction" style="color: var(--error)" (click)="delete(item)" matTooltip="DESACTIVAR">
                 <mat-icon class="custom-size-animation">delete</mat-icon>
-              </a> -->
+              </a>
             </td>
           </ng-container>
         </table>
