--- a/src/app/modules/subjects/list-subjects/list-subjects.component.html
+++ b/src/app/modules/subjects/list-subjects/list-subjects.component.html
@@ -6,9 +6,9 @@
     <input type="text" class="search-input" (keyup)="applyFilter($event)" #input />
   </div>
 
-  <!-- <button mat-raised-button (click)="createSong()" class="btnPrimary" style="height: 80%; margin-top: 10px">
+  <button mat-raised-button (click)="create()" class="btnPrimary" style="height: 80%; margin-top: 10px">
     <mat-icon class="icon-size">add</mat-icon>AGREGAR
-  </button> -->
+  </button>
 </mat-toolbar><br />
 
 <div class="container">
@@ -21,7 +21,7 @@
 
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="name">
               Nombre
             </th>
             <td mat-cell *matCellDef="let item" style="width: 50%">
@@ -31,7 +31,7 @@
 
 
           <ng-container matColumnDef="credits">
-            <th mat-header-cell class="primary" *matHeaderCellDef mat-sort-header="credits">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="credits">
               Creditos
             </th>
             <td mat-cell *matCellDef="let item" style="width: 25%">
@@ -40,17 +40,14 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell class="primary" *matHeaderCellDef>Acciones</th>
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let item" style="width: 25%;text-align: right;">
-              <!-- <a class="btnAction" (click)="updateSong(item)" style="color: var(--primary)" matTooltip="EDITAR">
+              <a class="btnAction" (click)="update(item)" style="color: var(--primary)" matTooltip="EDITAR">
                 <mat-icon class="custom-size-animation">edit</mat-icon>
               </a>
-              -->
-
-
-              <!-- <a class="btnAction" style="color: var(--error)" (click)="deleteSong(item)" matTooltip="DESACTIVAR">
+              <a class="btnAction" style="color: var(--error)" (click)="delete(item)" matTooltip="DESACTIVAR">
                 <mat-icon class="custom-size-animation">delete</mat-icon>
-              </a> -->
+              </a>
             </td>
           </ng-container>
         </table>
