--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,7 +116,7 @@ body {
 
 .mat-mdc-table {
     width: 100% !important;
-    margin-top: 10px !important;
+
     min-width: 1000px !important;
 }
 
@@ -316,6 +316,9 @@ td.mat-mdc-cell {
 
 tr.mat-mdc-header-row {
     height: 45px !important;
+    color: var(--primary);
+    font-weight: bolder;
+
 }
 
 
